--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,6 +16,8 @@
     "@saas/prettier": "workspace:*",
     "@saas/tsconfig": "workspace:*",
     "@types/node": "^25.2.2",
+    "dotenv": "^17.2.4",
+    "prisma": "^7.3.0",
     "tsx": "^4.21.0"
   },
   "prettier": "@saas/prettier",
