--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -6,9 +6,14 @@
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
+    "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
     "@saas/auth": "workspace:*",
+    "bcryptjs": "^3.0.3",
     "fastify": "^5.7.4",
     "fastify-type-provider-zod": "^6.1.0",
+    "pg": "^8.18.0",
+    "prisma": "^7.4.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
@@ -16,8 +21,8 @@
     "@saas/prettier": "workspace:*",
     "@saas/tsconfig": "workspace:*",
     "@types/node": "^25.2.2",
+    "@types/pg": "^8.16.0",
     "dotenv": "^17.2.4",
-    "prisma": "^7.3.0",
     "tsx": "^4.21.0"
   },
   "prettier": "@saas/prettier",
