--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -14,6 +14,7 @@
     "@saas/auth": "workspace:*",
     "bcryptjs": "^3.0.3",
     "fastify": "^5.7.4",
+    "fastify-plugin": "^5.1.0",
     "fastify-type-provider-zod": "^6.1.0",
     "pg": "^8.18.0",
     "prisma": "^7.4.0",
