--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,7 +2,12 @@
   "name": "@saas/api",
   "version": "1.0.0",
   "scripts": {
-    "dev": "tsx watch src/http/server.ts"
+    "env:load": "dotenv -e ../../.env --",
+    "dev": "pnpm env:load tsx watch src/http/server.ts",
+    "db:studio": "pnpm env:load prisma studio",
+    "db:generate": "pnpm env:load prisma generate",
+    "db:migrate": "pnpm env:load prisma migrate dev",
+    "db:seed": "pnpm env:load prisma db seed"
   },
   "dependencies": {
     "@fastify/cors": "^11.2.0",
@@ -12,6 +17,7 @@
     "@prisma/adapter-pg": "^7.4.0",
     "@prisma/client": "^7.4.0",
     "@saas/auth": "workspace:*",
+    "@saas/env": "workspace:*",
     "bcryptjs": "^3.0.3",
     "fastify": "^5.7.4",
     "fastify-plugin": "^5.1.0",
@@ -28,6 +34,7 @@
     "@types/node": "^25.2.2",
     "@types/pg": "^8.16.0",
     "dotenv": "^17.2.4",
+    "dotenv-cli": "^11.0.0",
     "tsx": "^4.21.0"
   },
   "prettier": "@saas/prettier",
