--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -2,7 +2,8 @@
   "extends": "@saas/tsconfig/node.json",
   "include": [
     "src/**/*",
-    "@types/*.d.ts"
+    "@types/*.d.ts",
+    "prisma.config.ts"
   ],
   "compilerOptions": {
     "baseUrl": ".",
